--- a/tpsi_5a_24_25.html
+++ b/tpsi_5a_24_25.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <div>
+        <ul class="nav">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+            <li><a href="courses.html">Courses</a></li>
+        </ul>
+        </div>
+        <div class="main">
         <table>
             <thead>
                 <tr>
@@ -168,6 +175,13 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="footer">
+        <ul>
+            <li><a href="https://github.com/kinderp"><img src="images/logos/github_logo.png" alt=""></a></li>
+            <li><a href="https://www.youtube.com/@antoniocaristia7010"><img src="images/logos/youtube_logo.png" alt=""></a></li>
+            <li><a href="https://www.linkedin.com/in/antonio-caristia-228917b0/"><img src="images/logos/linkedin_logo.png" alt=""></a></li>
+        </ul>
     </div>
 </body>
 </html>
